--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.caixa-principal {
+.caixa-Principal {
     background-color: var(--cor-principal);
     width: 90%;
     max-width: 500px;
@@ -49,7 +49,7 @@ button:hover {
     color: var(--cor-texto);
 }
 
-.caixa-resultado {
+.caixa-Resultado {
     display: none;
     text-align: center;
     padding: 20px;
@@ -59,11 +59,11 @@ button:hover {
     border-radius: 8px;
 }
 
-.caixa-resultado.mostrar {
+.caixa-Resultado.mostrar {
     opacity: 1;
 }
 
-.texto-resultado {
+.texto-Resultado {
     font-size: 1.2rem;
     color: var(--cor-texto);
 }
