--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --cor-fundo: #090029;
-    --cor-principal: #ffffff;
+    --cor-fundo: #290000;
+    --cor-principal: #ffffff0a;
     --cor-secundaria: #ffffff;
     --cor-destaque: #ff0000;
     --cor-texto: #000000;
